@@ -2,6 +2,7 @@
 	Add an urlcheck reply which is ignored: milterGreylistIgnore 
 	Build fixes for Debian (Bernhard Schneider)
 	Add a configure flag to not use --rpath (Bernhard Schneider)
+	Cleanup stale PID file on startup (Bernhard Schneider)
 4.0a2
 	For urlcheck answer, cope with a trailing line not terminated by CR
 	Fix X-Greylist lossage (AIDA Shinra)
